Phase 4: layouts, style catalog, components and texts per language
- Layouts: layout.json (style catalog, internal classes, areas,
  components with parameters, fonts, free-styling permission, fields),
  template.xhtml with {#insert} areas, components as Qute user tags,
  messages.json per language ({msg:…}), email.css, optional .dotx/.ott.
- Content pins a layout revision ("corporate@3") and is one
  {#include layout}; the layout's files appear under layout/.
- Content rules checked on the source with line and column: catalog
  classes only and literal, style kinds, no <style>/style/<link>;
  component parameters; areas. Free styling (opt-in, layout must allow
  it): PDF and XHTML only, hard CSS limits.
- Layout checks: areas vs inserts, components read only their parameters,
  catalog styles in the stylesheets and in .dotx/.ott, texts complete.
- {doc:lang} for the document language; layout and content fields form
  one schema.
- Server: templates are content or layouts; revisions record the pinned
  layout; content publishes only with a published layout revision; pinned
  layouts cannot be deleted; usedBy; composed revisions cached by hash.
- Demo split into content, layout/ and a second layout, layout-memo/:
  the same document passes every format check in both.
- Fix: linked stylesheets were rewritten twice when inlined into XHTML;
  footnote numbers started at 0 in the PDF.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>