@@ -5,35 +5,27 @@
 
 package at.itbh.pdfuagen.core.schema;
 
-import at.itbh.pdfuagen.core.LanguageVariants;
 import at.itbh.pdfuagen.core.OutputFormat;
 import at.itbh.pdfuagen.core.Problem;
 import at.itbh.pdfuagen.core.RenderException;
-import com.fasterxml.jackson.core.JsonParser;
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.json.JsonMapper;
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.EnumSet;
-import java.util.Iterator;
-import java.util.LinkedHashMap;
-import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
+import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 /**
  * The descriptor of a template ({@code <name>.json} next to {@code <name>.xhtml}): the language of
- * the default variant, the output formats it offers and the field definitions.
+ * the default variant, the layout it fills, how it is styled, the output formats it offers and the
+ * field definitions.
  *
  * <pre>{@code
  * {
  *   "language": "en",
+ *   "layout": "corporate@3",
  *   "formats": ["pdf", "docx"],
  *   "fields": {
  *     "customer": { "type": "object", "label": "Customer", "fields": {
@@ -45,19 +37,52 @@ import java.util.regex.Pattern;
  * }</pre>
  *
  * @param language language of the default variant
+ * @param layout the layout revision the template fills, or {@code null} for a template that brings
+ *     its own styling (written by developers)
+ * @param styling how a template with a layout is styled
  * @param formats the output formats the template offers; all formats if the descriptor names none
+ *     ({@code pdf} and {@code xhtml} for free styling)
  * @param fields the top-level fields, in definition order
  */
 public record TemplateDescriptor(
-    Locale language, Set<OutputFormat> formats, Map<String, Field> fields) {
+    Locale language,
+    LayoutRef layout,
+    Styling styling,
+    Set<OutputFormat> formats,
+    Map<String, Field> fields) {
 
-  /** Field names must be usable in Qute expressions ({@code {order.total}}). */
-  private static final Pattern NAME = Pattern.compile("[A-Za-z_][A-Za-z0-9_]*");
+  /** How a template with a layout is styled. */
+  public enum Styling {
+    /** Only through the layout's style catalog and components. */
+    CATALOG,
+    /** Also with {@code <style>} blocks and {@code style} attributes, within hard limits. */
+    FREE
+  }
 
-  private static final Set<String> NAMES_TAKEN_BY_LOOPS = Set.of("it");
+  /** Formats possible with free styling: only the renderers that take CSS as it is. */
+  public static final Set<OutputFormat> FREE_STYLING_FORMATS =
+      Collections.unmodifiableSet(EnumSet.of(OutputFormat.PDF, OutputFormat.XHTML));
 
-  private static final ObjectMapper MAPPER =
-      JsonMapper.builder().enable(JsonParser.Feature.STRICT_DUPLICATE_DETECTION).build();
+  /**
+   * A pinned layout revision, written {@code corporate@3}.
+   *
+   * @param id the layout's template id
+   * @param revision the revision number
+   */
+  public record LayoutRef(String id, int revision) {
+    private static final Pattern FORM =
+        Pattern.compile("([a-z0-9][a-z0-9-]{0,63})@([1-9][0-9]{0,8})");
+
+    static LayoutRef parse(String value) {
+      Matcher m = FORM.matcher(value);
+      return m.matches() ? new LayoutRef(m.group(1), Integer.parseInt(m.group(2))) : null;
+    }
+
+    @Override
+    public String toString() {
+      return id + "@" + revision;
+    }
+  }
 
   /**
    * Parses a descriptor.
@@ -66,190 +91,61 @@ public record TemplateDescriptor(
    * @throws RenderException listing every problem found, as {@link Problem#TEMPLATE_ERROR}
    */
   public static TemplateDescriptor parse(byte[] json, String name) throws RenderException {
-    JsonNode root;
-    try {
-      root = MAPPER.readTree(json);
-    } catch (JsonProcessingException e) {
-      String location =
-          e.getLocation() == null
-              ? name
-              : name
-                  + ", line "
-                  + e.getLocation().getLineNr()
-                  + ", column "
-                  + e.getLocation().getColumnNr();
-      throw new RenderException(
-          new Problem(Problem.TEMPLATE_ERROR, "invalid JSON: " + e.getOriginalMessage(), location),
-          e);
-    } catch (IOException e) {
-      throw new RenderException(
-          new Problem(Problem.TEMPLATE_ERROR, "cannot read: " + e.getMessage(), name), e);
+    JsonNode root = DescriptorParser.read(json, name);
+    DescriptorParser p = new DescriptorParser(name);
+    if (!p.object(root, "#", "the descriptor")) {
+      p.failOnProblems();
     }
-    Parser parser = new Parser(name);
-    TemplateDescriptor descriptor = parser.descriptor(root);
-    if (!parser.problems.isEmpty()) {
-      throw new RenderException(parser.problems);
+    p.onlyKeys(root, "#", Set.of("language", "layout", "styling", "formats", "fields"));
+    Locale language = p.language(root, "the default variant");
+    LayoutRef layout = null;
+    JsonNode layoutNode = root.get("layout");
+    if (layoutNode != null) {
+      layout = layoutNode.isTextual() ? LayoutRef.parse(layoutNode.asText()) : null;
+      if (layout == null) {
+        p.problem("#/layout", "'layout' must name a layout revision, e.g. \"corporate@3\"");
+      }
     }
-    return descriptor;
+    Styling styling = Styling.CATALOG;
+    JsonNode stylingNode = root.get("styling");
+    if (stylingNode != null) {
+      switch (stylingNode.asText()) {
+        case "catalog" -> styling = Styling.CATALOG;
+        case "free" -> styling = Styling.FREE;
+        default -> p.problem("#/styling", "'styling' must be \"catalog\" or \"free\"");
+      }
+      if (layoutNode == null) {
+        p.problem("#/styling", "'styling' applies only to a template with a layout");
+      }
+    }
+    Set<OutputFormat> formats =
+        styling == Styling.FREE
+            ? EnumSet.copyOf(FREE_STYLING_FORMATS)
+            : EnumSet.allOf(OutputFormat.class);
+    JsonNode formatsNode = root.get("formats");
+    if (formatsNode != null) {
+      formats = p.formats(formatsNode);
+      if (styling == Styling.FREE && !FREE_STYLING_FORMATS.containsAll(formats)) {
+        p.problem(
+            "#/formats",
+            "a template with free styling offers only pdf and xhtml: DOCX, ODT, email HTML and"
+                + " plain text cannot carry free CSS");
+      }
+    }
+    Map<String, Field> fields = Map.of();
+    JsonNode fieldsNode = root.get("fields");
+    if (fieldsNode == null) {
+      p.problem("#", "'fields' is required: the definitions of the template data");
+    } else {
+      fields = p.fields(fieldsNode, "#/fields");
+    }
+    p.failOnProblems();
+    return new TemplateDescriptor(
+        language, layout, styling, Collections.unmodifiableSet(formats), fields);
   }
 
-  private static final class Parser {
-
-    private final String name;
-    private final List<Problem> problems = new ArrayList<>();
-
-    Parser(String name) {
-      this.name = name;
-    }
-
-    TemplateDescriptor descriptor(JsonNode root) {
-      if (root == null || !root.isObject()) {
-        problem("#", "the descriptor must be a JSON object");
-        return null;
-      }
-      onlyKeys(root, "#", Set.of("language", "formats", "fields"));
-      Locale language = null;
-      JsonNode lang = root.get("language");
-      if (lang == null) {
-        problem("#", "'language' is required: the BCP 47 tag of the default variant, e.g. \"en\"");
-      } else if (!lang.isTextual() || !LanguageVariants.isLanguageTag(lang.asText())) {
-        problem(
-            "#/language", "'language' must be a BCP 47 language tag such as \"en\" or \"de-AT\"");
-      } else {
-        language = Locale.forLanguageTag(lang.asText());
-      }
-      Set<OutputFormat> formats = EnumSet.allOf(OutputFormat.class);
-      JsonNode formatsNode = root.get("formats");
-      if (formatsNode != null) {
-        formats = formats(formatsNode);
-      }
-      Map<String, Field> fields = Map.of();
-      JsonNode fieldsNode = root.get("fields");
-      if (fieldsNode == null) {
-        problem("#", "'fields' is required: the definitions of the template data");
-      } else {
-        fields = fields(fieldsNode, "#/fields");
-      }
-      return new TemplateDescriptor(language, Collections.unmodifiableSet(formats), fields);
-    }
-
-    private Set<OutputFormat> formats(JsonNode node) {
-      Set<OutputFormat> formats = EnumSet.noneOf(OutputFormat.class);
-      String allowed =
-          String.join(", ", Arrays.stream(OutputFormat.values()).map(OutputFormat::id).toList());
-      if (!node.isArray() || node.isEmpty()) {
-        problem("#/formats", "'formats' must be a non-empty list of: " + allowed);
-        return formats;
-      }
-      for (int i = 0; i < node.size(); i++) {
-        var format = OutputFormat.of(node.get(i).asText());
-        if (format.isPresent()) {
-          formats.add(format.get());
-        } else {
-          problem("#/formats/" + i, "unknown format; use one of: " + allowed);
-        }
-      }
-      return formats;
-    }
-
-    private Map<String, Field> fields(JsonNode node, String pointer) {
-      Map<String, Field> fields = new LinkedHashMap<>();
-      if (!node.isObject()) {
-        problem(pointer, "'fields' must be an object of field definitions");
-        return fields;
-      }
-      for (Iterator<Map.Entry<String, JsonNode>> it = node.fields(); it.hasNext(); ) {
-        Map.Entry<String, JsonNode> entry = it.next();
-        String fieldPointer = pointer + "/" + JsonPointer.escape(entry.getKey());
-        if (!NAME.matcher(entry.getKey()).matches()
-            || NAMES_TAKEN_BY_LOOPS.contains(entry.getKey())) {
-          problem(
-              fieldPointer,
-              "field name '"
-                  + entry.getKey()
-                  + "' is not usable in templates; use letters, digits and '_', not starting with"
-                  + " a digit, and not 'it'");
-        }
-        Field field = field(entry.getValue(), fieldPointer);
-        if (field != null) {
-          fields.put(entry.getKey(), field);
-        }
-      }
-      return fields;
-    }
-
-    private Field field(JsonNode node, String pointer) {
-      if (!node.isObject()) {
-        problem(pointer, "a field definition must be an object with at least 'type'");
-        return null;
-      }
-      JsonNode typeNode = node.get("type");
-      FieldType type = typeNode == null ? null : FieldType.of(typeNode.asText()).orElse(null);
-      if (type == null) {
-        problem(
-            pointer + "/type",
-            "'type' must be one of text, number, date, boolean, image, list, object");
-        return null;
-      }
-      Set<String> allowed =
-          switch (type) {
-            case OBJECT -> Set.of("type", "label", "description", "fields");
-            case LIST -> Set.of("type", "label", "description", "items");
-            default -> Set.of("type", "label", "description");
-          };
-      onlyKeys(node, pointer, allowed);
-      String label = text(node, "label", pointer);
-      String description = text(node, "description", pointer);
-      Map<String, Field> fields = null;
-      Field items = null;
-      if (type == FieldType.OBJECT) {
-        JsonNode fieldsNode = node.get("fields");
-        if (fieldsNode == null) {
-          problem(pointer, "an object field needs 'fields'");
-        } else {
-          fields = fields(fieldsNode, pointer + "/fields");
-        }
-      } else if (type == FieldType.LIST) {
-        JsonNode itemsNode = node.get("items");
-        if (itemsNode == null) {
-          problem(pointer, "a list field needs 'items', the definition of its elements");
-        } else {
-          items = field(itemsNode, pointer + "/items");
-        }
-      }
-      return new Field(type, label, description, fields, items);
-    }
-
-    private String text(JsonNode node, String key, String pointer) {
-      JsonNode value = node.get(key);
-      if (value == null) {
-        return null;
-      }
-      if (!value.isTextual()) {
-        problem(pointer + "/" + key, "'" + key + "' must be a string");
-        return null;
-      }
-      return value.asText();
-    }
-
-    private void onlyKeys(JsonNode node, String pointer, Set<String> allowed) {
-      node.fieldNames()
-          .forEachRemaining(
-              key -> {
-                if (!allowed.contains(key)) {
-                  problem(
-                      pointer + "/" + JsonPointer.escape(key),
-                      "unknown key '" + key + "'; allowed: " + String.join(", ", sorted(allowed)));
-                }
-              });
-    }
-
-    private static List<String> sorted(Set<String> set) {
-      return set.stream().sorted().toList();
-    }
-
-    private void problem(String pointer, String detail) {
-      problems.add(new Problem(Problem.TEMPLATE_ERROR, detail, name + pointer));
-    }
+  /** The same descriptor with other fields, e.g. combined with those of its layout. */
+  public TemplateDescriptor withFields(Map<String, Field> fields) {
+    return new TemplateDescriptor(language, layout, styling, formats, fields);
   }
 }
